
# Add new files in alphabetical order. Thanks.
libcollections_src = \
array.c \
bench-mark.c \
bheap.c \
bitset.c \
dlist.c \
flat-db.c \
hash-functions.c \
hash-map.c \
hash-table.c \
lhash-table.c \
rbtree.c \
slist.c \
tree-map.c \
tstring.c \
variant.c \
vector.c

# Add new files in alphabetical order. Thanks.
libcollections_headers = \
alloc.h \
array.h \
bench-mark.h \
bheap.h \
bheap-template.h \
bitset.h \
libcollections-config.h \
dlist.h \
flat-db.h \
hash-functions.h \
hash-map.h \
hash-table.h \
lhash-table.h \
macros.h \
rbtree.h \
slist.h \
tree-map.h \
tstring.h \
types.h \
variant.h \
vector.h \
vector-template.h

library_includedir      = $(includedir)/libcollections/
library_include_HEADERS = $(libcollections_headers)

# Library
lib_LTLIBRARIES                               = $(top_builddir)/lib/libcollections.la
__top_builddir__lib_libcollections_la_SOURCES = $(libcollections_src)

